# lib/db/src/schema/index.ts
@@ -10,3 +10,4 @@ export * from "./skill_progress";
 export * from "./messages";
 export * from "./verifications";
 export * from "./learning_paths";
+export * from "./sessions";
